# kvv

./: .gitignore  Cargo.toml  styles.css
src/: app.rs  efa.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
